test/integration/good/code-gen/print_unicode.stan
transformed data {
  print("test: Ğ‰ğŸ˜ƒ");
  print("Î» Î² Î¶ Ï€");
}
