test/integration/bad/lang/incomplete4.stan
transformed data {
  2.0 %/% 1.0; while (1) { print("hi"); }
}